--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
        </p>
 
        <h3>Skills</h3>
-       <p>I have been writing and developing projetcs for the past 3 years, in that time<br/>
+       <p style="color:red;font-size:large">I have been writing and developing projetcs for the past 3 years, in that time<br/>
         I have acquired intermediate knowledge in these languages:</p>
         <ul>
             <li>HTML & CSS</li>
@@ -40,6 +40,7 @@
             <li>Javascript</li>
             <li>React.js</li>
             <li>Vue.js</li>
+            <li>more</li>
         </ul>
 
         <h3>Contact Me</h3>
